open api create /request/borrow and tidy up resp error
